--- a/styles/main.css
+++ b/styles/main.css
@@ -4,116 +4,158 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
+  width: 100%; 
   clear: both; 
+  box-sizing: border-box; 
+  font-family: 'Josefin Sans', sans-serif;
   }
 
+p {
+  color: black;
+  font-size: 1em;
+  padding: .15em;
+}
+
+h2, h3, h4, h5, h6 {
+  font-family: 'Rochester', cursive;
+  color: dodgerblue;
+  font-size: 1.5em; 
+  padding: .15em; 
+  } 
+
+/* Begin Header Styling */
+
 header {
-  /*display: flex; */
-  justify-content: center;
-  align-items: center;
-  background-color: #A4A4A4; 
-  height: 5.5rem;
-  padding: 1.25em;  
+  display: flex;
+  height: 13em; 
   font-family: 'Josefin Sans', sans-serif;
 }
 
+header img { 
+  margin: 1em 1em 0 1em; 
+  float: left; 
+}
 
-/* Start Site Naviation Styling */
-.topnav {
-  display: flex;
-  float: left;  
+.logo {
+  width: 60px;
+}
+
+/* Begin Site Naviation Styling */
+
+ .topnav {
+  display: flex; 
+  justify-content: space-around; 
   width: 100%; 
-  font-size: 1.25rem; 
-}
+  background-color: #A4A4A4;
+  font-size: 1.25rem;   
+}  
 
-ul.site-nav {
-  list-style-type: none;
-  margin: 0;
-  overflow: hidden;  
-}
 
 ul.site-nav li {
-  display: inline-flex; 
-  color: black;   
-  flex: 1 1 100%;
-}
+  display: inline-block; 
+  text-align: center;
+  padding-left: 5em;
+  padding-right: 5em; 
+  padding-top: .75em; 
+  padding-bottom: .5em; 
+  list-style-type: none; 
+  color: black;  
+  font-weight: 600; 
+  font-size: 1.5em;
+} 
 
-ul.site-nav li a {
-  color: black; 
-  text-align: center; 
-  padding: 1rem; 
-  text-decoration: none; 
-  font-size: 1.25rem;
+
+ul.site-nav li a {  
+  color: black;
 }
 
 ul.site-nav li a:hover{
   color: white;
   text-decoration: underline;
-}
+} 
+
+
+/* Header 1 Styling */
+.name {
+  color: dodgerblue; 
+  font-size: 3em; 
+  max-width: 10em; 
+  padding-top: .5em;
+  font-weight: 600; 
+  }
 
 section { 
   padding: .25em .75em 4.5em; 
 }
 
-p {
-  font-family: 'Josefin Sans', sans-serif;
-  color: black;
-  font-size: 1em;
-  padding: .15em; 
+.container {
+  clear: both; 
+  margin: 0 1em; 
+  float: left; 
 }
-
-h1 {
-  font-family: 'Rochester', cursive;
-  color: dodgerblue; 
-  font-size: 3em;
-  }
-
-h2, h3, h4, h5, h6 {
-  font-family: 'Josefin Sans', sans-serif;
-  color: dodgerblue;
-  font-size: 1.5em; 
-  padding: .15em; 
-  }
 
 /* Start Aside Styling */
 
 aside { 
-  font-family: 'Josefin Sans', sans-serif;
-  padding: 1em;   
+  font-family: 'Josefin Sans', sans-serif; 
+  padding: 2em; 
+  float: left; 
 }
 
 .sort {
   background-color: white;
   height: 2rem;
-  padding: .5rem;
   font-family: 'Josefin Sans', sans-serif;
-  border: .1rem solid #eee;
+  padding: 0; 
 }
 
-input[type=submit] {
-  background-color: #A4A4A4;
-  border: .1rem solid black;
-  height: 2rem;
-  color: black;
+.form-control {
+}
+
+button[type=submit] {
+  background-color: #A4A4A4; 
+  color: black; 
+  font-weight: 600; 
+  border: .1rem solid black; 
   font-family: 'Josefin Sans', sans-serif;
-  padding: .6em .85em .5em;
+}
+
+.filter-lable {
+  font-size: 1.5em; 
+  font-weight: 600; 
+  align-content: space-between; 
 }
 
 /* Start Item Styling */
-.item-container {
+ .item-container {
   display:  flex; 
+  flex-wrap: wrap; 
 }
 
 .item { 
-  flex: 1; 
+  margin: 1em; 
+  padding 1em; 
 }
 
 .thumbnail {
     position: relative;
     padding: 0px;
+    max-width: 80%;
     margin-bottom: 20px;
 }
 
-.thumbnail img {
-    max-width: 15%;
+.item-header {
+  color: dodgerblue;
+  font-size: 1.5em; 
+  font-weight: 300;
+  text-decoration: underline; 
+  padding-left: 0.5em;  
 }
+
+.item-title {
+  color: dodgerblue;
+  font-size: 1.25em; 
+  font-weight: 300;
+}
+
+
